Fixes header text cut off

--- a/public/assets/css/site.css
+++ b/public/assets/css/site.css
@@ -262,7 +262,6 @@ body {
   color: #000080;
   display: flex;
   justify-content: space-between;
-  align-items: center;
 }
 
 .modal-header h3 {
